# Sonicthesia

./: COLLABORATIVE_LIBRARY_PLAN.md  Cargo.toml  GAMIFICATION_PLAN.md  README.md
.cargo/: config.toml
design/: DESIGN_SYSTEM.md
docs/: PLY_INTEGRATION_STATUS.md  PLY_MIGRATION_COMPLETE.md  PLY_RENDERING_STATUS.md  PLY_SETTINGS_IMPLEMENTATION_SUMMARY.md  PLY_SETTINGS_INTERACTIVE.md  PLY_SETTINGS_INTERACTIVITY_COMPLETE.md  PLY_SETTINGS_KEYBOARD_NAVIGATION.md  UNIFIED_INPUT_SYSTEM.md  ply_audio_migration_summary.md  ply_input_migration_summary.md  ply_integration_complete.md  ply_integration_guide.md  ply_phase5_testing_and_validation.md  ply_phase5_testing_and_validation_results.md  ply_phase6_polish_and_optimization.md  ply_rendering_migration_plan.md  ply_ui_migration_summary.md  ply_usage_verification.md  ply_verification_and_demonstration.md  waterfall-rendering-techniques.md
neothesia/: Cargo.toml
neothesia-core/: Cargo.toml
neothesia/src/: common.rs  context.rs  context_macroquad.rs  input_stubs.rs  main.rs  main_macroquad.rs  midi_input_macroquad.rs  scoring_data.rs  song.rs  virtual_resolution.rs
neothesia/src/achievements/: mod.rs
neothesia/src/challenges/: mod.rs
neothesia/src/effects/: mod.rs
neothesia/src/learning/: mod.rs
neothesia/src/output_manager/: mod.rs  ply_bridge.rs  synth_backend.rs
neothesia/src/ply_integration/: audio.rs  error.rs  game_logic.rs  mod.rs  song_library.rs  tests.rs
neothesia/src/ply_integration/input/: cursor.rs  focus_manager.rs  gamepad.rs  keyboard.rs  keyboard_to_midi.rs  mod.rs  mouse.rs  priority_manager.rs  unified_input.rs
neothesia/src/ply_integration/ui/: input.rs  layout.rs  mod.rs  tests.rs  widgets.rs
neothesia/src/render/: mod.rs
neothesia/src/render/ply/: effects.rs  guidelines.rs  keyboard.rs  macroquad_renderer.rs  mod.rs  note_labels.rs  piano_keyboard.rs  renderer.rs  tests.rs  waterfall.rs
neothesia/src/render/ply/waterfall/: mod.rs  renderer_2d.rs
neothesia/src/scene/: mod.rs  ply_fonts.rs  ply_scene.rs  ply_settings.rs
neothesia/src/scene/freeplay/: mod.rs
neothesia/src/scene/menu_scene/: mod.rs  ply_menu.rs  ply_settings.rs  settings.rs  song_library.rs  state.rs
neothesia/src/scene/playing_scene/: keyboard.rs  midi_player.rs  mod.rs  ply_top_bar.rs
neothesia/src/scene/playing_scene/top_bar/: mod.rs
neothesia/src/scene/score_scene/: ui.rs
neothesia/src/scoring/: live_score.rs  mod.rs  stars.rs  streak.rs  timing.rs
neothesia/src/settings/: interaction.rs  mod.rs  navigation.rs  page.rs
neothesia/src/settings/pages/: audio.rs  folders.rs  general.rs  midi.rs  mod.rs  song_library.rs  song_selected.rs  themes.rs
neothesia/src/song_library/: database.rs  mod.rs  models.rs  parser.rs  scanner.rs
neothesia/src/ui/: mod.rs  toast.rs
neothesia/src/ui/components/: color_picker.rs  glass_panel.rs  header.rs  mod.rs  mode_selector.rs  progress_bar.rs  session_config.rs  settings_ui.rs  sidebar.rs  song_card.rs  star_rating.rs  status_chip.rs  storage_indicator.rs  theme_card.rs
plans/: input_priority_system_design.md  piano-theme-system-design.md  ply_migration_plan.md  ply_optimization_plan.md  ply_vs_neothesia_comparison.md  task_11_ply_engine_integration.md  (+1 more)
(+22 files in other folders)
