[workspace]
members = [
  "piano-layout",
  "neothesia",
  "neothesia-ai",
  "neothesia-core",
  "neothesia-image",
  "midi-file",
  "midi-io",
]

default-members = ["neothesia"]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
neothesia-core = { path = "./neothesia-core" }
neothesia-image = { path = "./neothesia-image" }
midi-file = { path = "./midi-file" }
midi-io = { path = "./midi-io" }
piano-layout = { path = "./piano-layout" }
ply-engine = "1.0.3"

anyhow = "1"
thiserror = "2.0"
log = "0.4"

bytes = "1"

bytemuck = { version = "1.5", features = ["derive"] }
env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }
pollster = "0.4"
futures-channel = "0.3"
euclid = "0.22"

lilt = "0.8"
winit = "0.30"
dpi = "0.1"
rfd = "0.17"
cpal = "0.17"
fluidlite = { version = "0.2", features = ["builtin"] }
oxisynth = "0.1.0"
embed-resource = "3.0"
midir = "0.10"
objc = "0.2"
ron = "0.12"
serde = "1"
raw-window-handle = "0.6.0"

profiling = "1.0"
puffin = "0.19"
puffin_http = "0.16"

cosmic-text = "0.15"
png = "0.18"
midly = "0.5"

# neothesia-ai deps
ndarray = "0.17"
rten = "0.24"
rten-tensor = "0.24"
serde_json = "1"
symphonia = { version = "0.5", features = ["mp3"] }
symphonium = { version = "0.6", features = ["mp3"] }
