[package]
name = "neothesia"
version = "0.4.0"
authors = ["Poly <marynczak.bartlomiej@gmail.com>"]
edition.workspace = true
default-run = "neothesia"

[features]
default = ["oxi-synth", "ply-rendering"]

profiling-on = ["profiling/profile-with-puffin"]
synth = []
fluid-synth = ["synth", "cpal", "fluidlite", "oxisynth"]
oxi-synth = ["synth", "cpal", "oxisynth"]

# Rendering engine selection
ply-rendering = ["ply-engine", "macroquad"]  # Use PLY/macroquad rendering (default)
wgpu-rendering = [] # Use WGPU rendering (legacy)

[dependencies]
pollster.workspace = true
log.workspace = true
env_logger.workspace = true
wgpu.workspace = true
wgpu-jumpstart.workspace = true
neothesia-core.workspace = true
neothesia-image.workspace = true
midi-file.workspace = true
midi-io.workspace = true
nuon.workspace = true
ply-engine = { workspace = true, optional = true }
futures-channel.workspace = true
cosmic-text.workspace = true

bytes.workspace = true
lilt.workspace = true
winit.workspace = true
rfd.workspace = true

cpal = { workspace = true, optional = true }
fluidlite = { workspace = true, optional = true }
oxisynth = { workspace = true, optional = true }

profiling.workspace = true
puffin.workspace = true
puffin_http.workspace = true
piano-layout.workspace = true
rusqlite = { version = "0.30", features = ["bundled"] }
chrono = "0.4"
dirs = "6.0"
thiserror.workspace = true
serde_json.workspace = true

# Macroquad for PLY rendering (renamed from macroquad-ply to avoid duplicate symbols)
# When ply-rendering is enabled, we use macroquad-ply instead of macroquad to avoid conflicts
macroquad = { package = "macroquad-ply", version = "0.4", optional = true }

[[bin]]
name = "neothesia"

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource.workspace = true
